# rmt

./: Cargo.toml  LICENSE  README.md
examples/: config.ini  template.eml
src/: cli.yml  config.rs  main.rs  template.rs
