[package]
authors = ["Muharem Hrnjadovic <muharem@linux.com>"]
categories = ["command-line-utilities"]
description = "A command-line tool to send emails using templates"
name = "rmt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
