[package]
authors = ["Muharem Hrnjadovic <muharem@linux.com>"]
categories = ["command-line-utilities"]
description = "Tool for automated sending of emails using templates"
name = "rmt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.0", features = ["yaml"]}
rust-ini = "0.13.0"
tempfile = "3.1.0"
